# game-recommender-bot

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-0b7c47be2142693967d9054120e2377c99cb541e825dea685a3ba1d49fdfbe7c.json  query-1b89705793153f2c5088b05bf354222e7f2783bfc31fc43799233c84340a9e71.json
cron/: scheduler.rs
migrations/: 20250212032319_init.sql  20250215190843_add_games_table.sql
scripts/: backup.sh
src/: bot.rs  db.rs  lib.rs  llm.rs  main.rs  steam.rs
src/database/: db.rs
tests/: common.rs  steam_tests.rs
