[package]
name = "game-recommender"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
dotenvy = "0.15.7"
itertools = "0.14.0"
once_cell = "1.17"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serenity = { version = "0.12.0", default-features = false, features = ["client", "collector", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tracing = "0.1.37"
uuid = {version = "1.16.0", features = ["v4"]}
serde_json = "1.0.140"

[dev-dependencies]
serde_json = "1.0.140"
wiremock = "0.6.3"

[lib]
name = "game_recommender"
path = "src/lib.rs"
